<resources>
    <string name="app_name">Amuesy</string>

    <string-array name="Profiles">
        <item>Child</item>
        <item>Teen</item>
        <item>Adult</item>
    </string-array>

    <string-array name="Levels">
        <item>Easy</item>
        <item>Intermediate</item>
        <item>Hard</item>
    </string-array>

    <string-array name="Museums">
        <item>Paris</item>
        <item>Tel Aviv</item>
        <item>Haifa</item>
        <item>Jerusalem</item>
        <item>London</item>
        <item>Roma</item>
        <item>Berlin</item>
        <item>New York</item>

    </string-array>

    <string name="Categories_1">Modern Art</string>
    <string name="Categories_2">Israeli Art</string>
    <string name="Categories_3">Prints and Drawings</string>
    <string name="Categories_4">Photography</string>
    <string name="Categories_5">Architecture and Design</string>
    <string-array name="Categories">
        <item>@string/Categories_1</item>
        <item>@string/Categories_2</item>
        <item>@string/Categories_3</item>
        <item>@string/Categories_4</item>
        <item>@string/Categories_5</item>
    </string-array>


    <string name="title_activity_maps1">Map</string>

    <string name="google_maps_API_key">AIzaSyBlbbyytkC8PkYpPf_Av2nIjtx1q8rXxy4</string>


</resources>
